--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,6 @@ dependencies {
 
 // Add your dependencies here.
 //  compile 'com.google.cloud:google-cloud:+'   // Latest Cloud API's http://googlecloudplatform.github.io/google-cloud-java
-  compile group: 'org.apache.commons', name: 'commons-math3', version: '3.2'
   compile 'com.google.code.gson:gson:2.8.5'
 
   // for tests
@@ -71,7 +70,7 @@ test {
   }
 }
 
-group   = "com.example.appenginej8"        // Generated output GroupId
+group   = "com.matrix.appenginej8"        // Generated output GroupId
 version = "1.0-SNAPSHOT"       // Version in generated output
 
 sourceCompatibility = 1.8     // App Engine Flexible uses Java 8
